--- a/sw/templates/404.html
+++ b/sw/templates/404.html
@@ -12,7 +12,7 @@
 
 {% block page_content %}
     <div class="grid_6 prefix_3 suffix_3">
-        <div id="underconstruction">
+        <div id="largepagepanel">
             <p>
                 We couldn't find the page you requested.
                 Please use the links above to choose another destination.
