--- a/sw/templates/base/auth_bar_signedout.html
+++ b/sw/templates/base/auth_bar_signedout.html
@@ -1,1 +1,1 @@
-<span><a href="{% url account_login %}">Volunteer sign in / sign up</a></span>
+<span><a href="{% url sw_hq %}">Volunteer sign in / sign up</a></span>
