--- a/sw/templates/base_12.html
+++ b/sw/templates/base_12.html
@@ -1,7 +1,7 @@
 {% extends "base_8_4.html" %}
 
 {% block page_content %}
-    <div id="content" class="alpha omega grid_12">
+    <div id="content" class="grid_12">
         {% include "site_messages.html" %}
         {% block content_body %}{% endblock %}
     </div>
