--- a/sw/templates/featurelabs/base.html
+++ b/sw/templates/featurelabs/base.html
@@ -28,7 +28,7 @@
         {% endblock %}
     {% disabled %}
         <div class="grid_6 prefix_3 suffix_3">
-            <div id="underconstruction">
+            <div id="largepagepanel">
                 <p>
                     You haven't enabled the feature labs for your browsing
                     session.
