--- a/sw/templates/idios/base.html
+++ b/sw/templates/idios/base.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block page_content %}
-    <div id="content" class="alpha omega grid_12">
+    <div id="content" class="grid_12">
         {% include "site_messages.html" %}
         {% block body %}
         {% endblock %}
