--- a/sw/templates/menu/site_sections_visitor.html
+++ b/sw/templates/menu/site_sections_visitor.html
@@ -5,6 +5,6 @@
 {% if user.is_authenticated %}
     <li><a href="{% url dashboard_index %}">Volunteer HQ</a></li>
 {% else %}
-    <li><a href="{% url account_login %}">Volunteer HQ</a></li>
+    <li><a href="{% url sw_hq %}">Volunteer HQ</a></li>
 {% endif %}
 <li><a href="/donate/">Donate</a></li>
