--- a/sw/templates/search/search.html
+++ b/sw/templates/search/search.html
@@ -16,7 +16,7 @@
     {% endfeature %}
 
     <div class="grid_6 prefix_3 suffix_3">
-        <div id="underconstruction">
+        <div id="largepagepanel">
             <p>
                 Sorry, site-wide search is under maintenance
                 and is not available.  Please check back soon.
