--- a/sw/templates/site_base.html
+++ b/sw/templates/site_base.html
@@ -5,7 +5,7 @@
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
 {% block page_content %}
-    <div id="content" class="alpha omega grid_12">
+    <div id="content" class="grid_12">
         {% include "site_messages.html" %}
         {% block body %}
         {% endblock %}
