--- a/sw/templates/sw/underconstruction.html
+++ b/sw/templates/sw/underconstruction.html
@@ -1,5 +1,5 @@
 <div class="grid_6 prefix_3 suffix_3">
-    <div id="underconstruction">
+    <div id="largepagepanel">
         <p>
             This site is not yet live.  Our official site is
             <a href="http://sensiblewashington.org/">sensiblewashington.org</a>.
