--- a/sw/templates/500.html
+++ b/sw/templates/500.html
@@ -12,7 +12,7 @@
 
 {% block page_content %}
     <div class="grid_6 prefix_3 suffix_3">
-        <div id="underconstruction">
+        <div id="largepagepanel">
             <p>
                 The computer software that runs this website experienced
                 an unexpected error.
