--- a/sw/templates/account/signup.html
+++ b/sw/templates/account/signup.html
@@ -21,7 +21,7 @@
     {% else %}
         <p>{% trans "Already have an account?" %} <a href="{% url account_login %}">{% trans "Sign in" %}</a>.</p>
 
-        <form class="signup uniForm" id="signup_form" method="post" action="{% url account_signup %}">
+        <form class="signup uniForm" id="signup_form" method="post" action="{% url sw_hq %}">
             {% csrf_token %}
             <fieldset class="inlineLabels">
                 {{ form|as_uni_form }}
