--- a/sw/templates/cms/base.html
+++ b/sw/templates/cms/base.html
@@ -13,7 +13,7 @@
 {% block page_content %}
     {% feature cms_content %}
         {% include "sw/cms_page_preamble.html" %}
-        <div id="content" class="alpha omega grid_12">
+        <div id="content" class="grid_12">
             {% include "site_messages.html" %}
             <div class="section">
                 {% feature breadcrumbs %}{% disabled %}
