--- a/sw/templates/socialaccount/login.html
+++ b/sw/templates/socialaccount/login.html
@@ -36,7 +36,7 @@
         {% user_display user as user_display %}
         <p><strong>{% trans "Note" %}:</strong> {% blocktrans %}you are already signed in as {{ user_display }}.{% endblocktrans %}</p>
 {% else  %}
-        {% url account_signup as signup_url %}
+        {% url sw_hq as signup_url %}
         <p>{% blocktrans %}Otherwise, <a href="{{ signup_url }}">sign up</a> for a new account.{% endblocktrans %}</p>
 {% endif %}
 
