--- a/sw/templates/sw/hq.html
+++ b/sw/templates/sw/hq.html
@@ -53,6 +53,8 @@
             use the same service each time you sign in.
         </p>
 
+        {% include "socialaccount/snippets/login_extra.html" %}
+
         <ul class="socialaccount_providers">
             {% include "socialaccount/snippets/provider_list.html" %}
         </ul>
